fix overflow styling in catalog search
these style changes allow the expanding options to be completely
visible and expand indefinitely; additionally, this prevents a
scenario where an expandable option group expands beyond the bottom of
the page and is not scrollable, which prevents users from interacting
with anything below the page cutoff, including any Intro steps that
anchor to an element that is not visible

--- a/src/Stylesheets/index.css
+++ b/src/Stylesheets/index.css
@@ -12,7 +12,6 @@ body {
 }
 
 html {
-  min-height: 100%;
   background-image: linear-gradient(to bottom right, #1c4b6b, rgb(48, 120, 158),#265777, rgb(51, 119, 155));
   background-repeat: no-repeat;
   -webkit-background-size: cover;
